Translation to Russian language

--- a/webmaerd/templates/base/head.html
+++ b/webmaerd/templates/base/head.html
@@ -1,11 +1,12 @@
+{% load i18n %}
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="HTML5 Template"/>
-    <meta name="description" content="Webmaerd - web development agency"/>
-    <meta name="author" content="potenzaglobalsolutions.com"/>
+    <meta name="keywords" content="Webmaerd, Web Development, Web Design, web, domain, hosting, development, agency, webpage, website, site, site creation, order site, order webpage, programming"/>
+    <meta name="description" content="Webmaerd - {% trans "web development agency" %}"/>
+    <meta name="author" content="webmaerd.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <title>Webmaerd - web development agency</title>
+    <title>Webmaerd - {% trans "web development agency" %}</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/static/images/favicon.ico"/>
