--- a/webmaerd/templates/success_page.html
+++ b/webmaerd/templates/success_page.html
@@ -10,12 +10,12 @@ page-title-->
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-title-name">
-                    <h1>Success page</h1>
-                    <p>We know the secret of your success</p>
+                    <h1>{% trans "Success page" %}</h1>
+                    <p>{% trans "We know the secret of your success" %}</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="/"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><span>Success page</span></li>
+                    <li><a href="/"><i class="fa fa-home"></i> {% trans "Home" %}</a> <i class="fa fa-angle-double-right"></i></li>
+                    <li><span>{% trans "Success page" %}</span></li>
                 </ul>
             </div>
         </div>
@@ -34,13 +34,13 @@ page-title -->
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
                 <div class="error-block text-center clearfix">
-                    <h1 class="theme-color mb-40">Success</h1>
-                    <p>Your message has been successfully sent.</p>
+                    <h1 class="theme-color mb-40">{% trans "Success" %}</h1>
+                    <p>{% trans "Your message has been successfully sent" %}.</p>
                 </div>
                 <div class="error-info">
-                    <p class="mb-50">Thank you for contacting us. We will reply to you shortly.</p>
-                    <a class="button xs-mb-10 " href="/">back to home</a>
-                    <a class="button button-border black" href="/contact">back to Contact page</a>
+                    <p class="mb-50">{% trans "Thank you for contacting us. We will reply to you shortly" %}.</p>
+                    <a class="button xs-mb-10 " href="/">{% trans "back to home" %}</a>
+                    <a class="button button-border black" href="/contact">{% trans "back to Contact page" %}</a>
                 </div>
             </div>
         </div>
@@ -58,13 +58,13 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
-                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
-                        site on the hosting, assistance in setting up mail for your domain.</p>
+                    <h3><strong> Webmaerd: </strong> {% trans "Modern Web Development and Web Design" %}</h3>
+                    <p>
+{% trans "You can order website creation, web design, purchase and domain settings, help in placing the site on the hosting, assistance in setting up mail for your domain." %}</p>
                 </div>
                 <div class="action-box-button">
                     <a class="button button-border white" href="/contact">
-                        <span>Contact US</span>
+                        <span>{% trans "Contact US" %}</span>
                         <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
