--- a/webmaerd/templates/base/footer.html
+++ b/webmaerd/templates/base/footer.html
@@ -1,22 +1,23 @@
+{% load i18n %}
 <footer class="footer page-section-pt black-bg">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-sm-4 sm-mb-10">
-                <h6 class="text-white mb-10 mt-10 text-uppercase">Navigation:</h6>
+                <h6 class="text-white mb-10 mt-10 text-uppercase">{% trans "Navigation" %}:</h6>
                 <div class="footer-social">
                     <ul>
-                        <li class="list-inline-item"><a href="/">Home</a>&nbsp;&nbsp;&nbsp;|</li>
-                        <li class="list-inline-item"><a href="/portfolio">Portfolio</a>&nbsp;&nbsp;&nbsp;|</li>
-                        <li class="list-inline-item"><a href="/contact">Contact Us</a>&nbsp;&nbsp;&nbsp;|</li>
-                        <li class="list-inline-item"><a href="/faq">FAQ</a></li>
+                        <li class="list-inline-item"><a href="/">{% trans "Home" %}</a>&nbsp;&nbsp;&nbsp;|</li>
+                        <li class="list-inline-item"><a href="/portfolio">{% trans "Portfolio" %}</a>&nbsp;&nbsp;&nbsp;|</li>
+                        <li class="list-inline-item"><a href="/contact">{% trans "Contact Us" %}</a>&nbsp;&nbsp;&nbsp;|</li>
+                        <li class="list-inline-item"><a href="/faq">{% trans "FAQ" %}</a></li>
                     </ul>
                 </div>
 
             </div>
             <div class="col-lg-4 col-sm-4 xs-mb-10">
-                <h6 class="text-white mb-10 mt-10 text-uppercase">Contact Us:</h6>
+                <h6 class="text-white mb-10 mt-10 text-uppercase">{% trans "Contact Us" %}:</h6>
                 <ul class="addresss-info">
-                    <li><i class="fa fa-envelope-o"></i>Email: contact@webmaerd.com</li>
+                    <li><i class="fa fa-envelope-o"></i>{% trans "Email" %}: contact@webmaerd.com</li>
                 </ul>
             </div>
             <div class="col-lg-4 col-sm-4 xs-mb-10 text-left text-md-right">
@@ -34,7 +35,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span>
-                        <a href="/"> Webmaerd </a> All Rights Reserved
+                        <a href="/"> Webmaerd </a> {% trans "All Rights Reserved" %}
                     </p>
                 </div>
             </div>
