--- a/webmaerd/templates/portfolio.html
+++ b/webmaerd/templates/portfolio.html
@@ -10,12 +10,12 @@ page-title-->
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-title-name">
-                    <h1>Our Portfolio</h1>
-                    <p>Our Latest Works</p>
+                    <h1>{% trans "Our Portfolio" %}</h1>
+                    <p>{% trans "Our Latest Works" %}</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="/"><i class="fa fa-home"></i> Home</a> <i class="fa fa-angle-double-right"></i></li>
-                    <li><span>Portfolio</span></li>
+                    <li><a href="/"><i class="fa fa-home"></i> {% trans "Home" %}</a> <i class="fa fa-angle-double-right"></i></li>
+                    <li><span>{% trans "Portfolio" %}</span></li>
                 </ul>
             </div>
         </div>
@@ -63,13 +63,13 @@ action box- -->
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="action-box-text">
-                    <h3><strong> Webmaerd: </strong> Modern web development and web design</h3>
-                    <p>You can order website creation, web design, purchase and domain settings, help in placing the
-                        site on the hosting, assistance in setting up mail for your domain.</p>
+                    <h3><strong> Webmaerd: </strong> {% trans "Modern Web Development and Web Design" %}</h3>
+                    <p>
+{% trans "You can order website creation, web design, purchase and domain settings, help in placing the site on the hosting, assistance in setting up mail for your domain" %}.</p>
                 </div>
                 <div class="action-box-button">
                     <a class="button button-border white" href="/contact">
-                        <span>Contact US</span>
+                        <span>{% trans "Contact US" %}</span>
                         <i class="fa fa-envelope-o"></i>
                     </a>
                 </div>
