Added Polish language

--- a/webmaerd/templates/base/header.html
+++ b/webmaerd/templates/base/header.html
@@ -70,11 +70,11 @@
                                            aria-expanded="false"><img src="/static/images/flags/ru-flag.png"
                                                                       alt="RU">&nbsp; Русский</a>
                                         {% endif %}
-                                        {% if LANGUAGE_CODE == 'it' %}
+                                        {% if LANGUAGE_CODE == 'pl' %}
                                         <input name="language" type="hidden" value="it"/>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                           aria-expanded="false"><img src="/static/images/flags/it-flag.png"
-                                                                      alt="IT">&nbsp; Italiano</a>
+                                           aria-expanded="false"><img src="/static/images/flags/pl-flag.png"
+                                                                      alt="PL">&nbsp; Polski</a>
                                         {% endif %}
                                         <ul class="drop-down-multilevel" id="language-switcher">
                                             {% get_current_language as LANGUAGE_CODE %}
